--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
                     </div>
                 </div>
 
+                <!-- Vision Section -->
+
+  
+
                 <!-- Service 3: Tư Vấn Thiết Kế -->
                 <div class="service-card">
                     <div class="service-image">
@@ -253,6 +257,76 @@
             </div>
         </div>
     </section>
+
+
+
+    <section class="vision" style="background: var(--bg-light);">
+        <div class="container">
+          <div class="section-header">
+            <h2>Tầm Nhìn Của RBY GROUP</h2>
+            <div class="divider"></div>
+            <p>Khát Vọng Dẫn Đầu – Phát Triển Bền Vững</p>
+          </div>
+          <div class="about-content">
+            <div class="about-image">
+              <img src="./anh/tuvan5.png" alt="Tầm Nhìn RBY Group">
+            </div>
+            <div class="about-text">
+              <h3>Trở Thành Tập Đoàn Đa Ngành Hàng Đầu Việt Nam</h3>
+              <p>RBY Group định hướng trở thành một trong những tập đoàn đa lĩnh vực. Chúng tôi luôn nỗ lực không ngừng để mang đến những sản phẩm – dịch vụ chất lượng, ứng dụng công nghệ tiên tiến, phục vụ tốt nhất cho khách hàng.</p>
+              <p>Tầm nhìn của chúng tôi không chỉ dừng lại ở thị trường trong nước mà còn hướng đến vươn tầm khu vực Đông Nam Á, xây dựng thương hiệu RBY GROUP trở thành biểu tượng của chất lượng, sáng tạo và uy tín.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      
+      <!-- Development Orientation Section -->
+      <section class="development"  >
+        <div class="container">
+          <div class="section-header">
+            <h2>Định Hướng Phát Triển</h2>
+            <div class="divider" style="background: white;"></div>
+            <p>Phát Triển Toàn Diện – Hợp Tác Bền Vững – Hướng Tới Tương Lai</p>
+          </div>
+          <div class="about-content">
+            <div class="about-image">
+                <img src="./anh/tuvan6.png" alt="Định Hướng Phát Triển RBY Group">
+              </div>
+            <div class="about-text">
+              <h3>Chiến Lược Phát Triển Đến Năm 2030</h3>
+              <p>RBY GROUP tập trung mở rộng hệ thống đại lý, showroom trên toàn quốc, đồng thời đẩy mạnh ứng dụng chuyển đổi số vào quản lý – vận hành – bán hàng. Chúng tôi hướng tới việc xây dựng hệ sinh thái toàn diện, kết nối giữa các ngành nghề cốt lõi để mang lại giá trị cộng hưởng cao nhất cho khách hàng và đối tác.</p>
+              <div class="about-stats">
+                <div class="stat-item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <h3>63+</h3>
+                    <p>Tỉnh Thành Có Đại Lý & Chi Nhánh</p>
+                </div>
+                <div class="stat-item">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3>100%</h3>
+                    <p>Chuyển Đổi Số Toàn Diện</p>
+                </div>
+                <div class="stat-item">
+                    <i class="fas fa-handshake"></i>
+                    <h3>50+</h3>
+                    <p>Đối Tác Chiến Lược & Liên Kết Quốc Tế</p>
+                </div>
+                <div class="stat-item">
+                    <i class="fas fa-paint-roller"></i>
+                    <h3>Top 1</h3>
+                    <p>Thương Hiệu Sơn Việt Vươn Tầm Khu Vực</p>
+                </div>
+                <div class="stat-item">
+                    <i class="fas fa-leaf"></i>
+                    <h3>100%</h3>
+                    <p>Dự Án Hướng Tới Môi Trường & Cộng Đồng</p>
+                </div>
+            </div>
+            </div>
+           
+          </div>
+        </div>
+      </section>
 
 <!-- Projects Section -->
 <section class="projects">
