--- a/thiet-ke.html
+++ b/thiet-ke.html
@@ -135,6 +135,18 @@
             </div>
             <div class="content-grid">
                 <div class="content-card">
+                    <h3><i class="fas fa-tools"></i> Thi Công Trọn Gói</h3>
+                    <p>Dịch vụ thi công trọn gói từ A-Z bao gồm thiết kế, cung cấp vật liệu, thi công, giám sát và nghiệm thu. Khách hàng chỉ cần nhận nhà hoàn thiện đẹp.</p>
+                    <ul>
+                        <li><i class="fas fa-check"></i> Quản lý dự án chuyên nghiệp</li>
+                        <li><i class="fas fa-check"></i> Đội ngũ thợ thi công lành nghề</li>
+                        <li><i class="fas fa-check"></i> Giám sát chặt chẽ từng công đoạn</li>
+                        <li><i class="fas fa-check"></i> Vật liệu chính hãng, chất lượng cao</li>
+                        <li><i class="fas fa-check"></i> Tiến độ đúng cam kết</li>
+                        <li><i class="fas fa-check"></i> Bảo hành dài hạn sau bàn giao</li>
+                    </ul>
+                </div>
+                <div class="content-card">
                     <h3><i class="fas fa-pencil-ruler"></i> Đội Ngũ Kiến Trúc Sư</h3>
                     <p>Rby Group sở hữu đội ngũ kiến trúc sư, nhà thiết kế nội thất giàu kinh nghiệm, có tầm nhìn thẩm mỹ hiện đại. Chúng tôi luôn cập nhật xu hướng thiết kế mới nhất trên thế giới.</p>
                     <ul>
@@ -170,18 +182,7 @@
                         <li><i class="fas fa-check"></i> Phù hợp với lối sống hiện đại</li>
                     </ul>
                 </div>
-                <div class="content-card">
-                    <h3><i class="fas fa-tools"></i> Thi Công Trọn Gói</h3>
-                    <p>Dịch vụ thi công trọn gói từ A-Z bao gồm thiết kế, cung cấp vật liệu, thi công, giám sát và nghiệm thu. Khách hàng chỉ cần nhận nhà hoàn thiện đẹp.</p>
-                    <ul>
-                        <li><i class="fas fa-check"></i> Quản lý dự án chuyên nghiệp</li>
-                        <li><i class="fas fa-check"></i> Đội ngũ thợ thi công lành nghề</li>
-                        <li><i class="fas fa-check"></i> Giám sát chặt chẽ từng công đoạn</li>
-                        <li><i class="fas fa-check"></i> Vật liệu chính hãng, chất lượng cao</li>
-                        <li><i class="fas fa-check"></i> Tiến độ đúng cam kết</li>
-                        <li><i class="fas fa-check"></i> Bảo hành dài hạn sau bàn giao</li>
-                    </ul>
-                </div>
+                
             </div>
         </div>
     </section>
@@ -197,16 +198,39 @@
             <div class="product-grid">
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Thiết Kế Nhà Ở">
+                        <img src="https://images.pexels.com/photos/259962/pexels-photo-259962.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Tư Vấn Thiết Kế Nhà Dân Dụng Trọn Gói">
                     </div>
                     <div class="product-info">
-                        <h3>Thiết Kế Nhà Ở</h3>
-                        <p>Thiết kế nội thất nhà ở hiện đại, sang trọng, ấm cúng. Từ căn hộ chung cư, nhà phố đến biệt thự. Tạo không gian sống lý tưởng cho gia đình.</p>
+                        <h3>Tư Vấn Thiết Kế Nhà Dân Dụng Trọn Gói</h3>
+                        <p>Dịch vụ trọn gói của RBY Group bao gồm từ khâu tư vấn, lên ý tưởng, thiết kế 2D - 3D, đến thi công và giám sát công trình. Khách hàng chỉ cần đưa ra mong muốn, chúng tôi sẽ hiện thực hóa toàn bộ ngôi nhà trong mơ một cách chuyên nghiệp, tiết kiệm và chuẩn tiến độ.</p>
+                    </div>
+                </div>
+
+                <div class="product-item">
+                    <div class="product-image">
+                        <img src="https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Tư Vấn Thiết Kế Nội Thất Ngoại Thất">
+                        <a href="contact.html" class="view-detail">Xem chi tiết</a>
+                    </div>
+                    <div class="product-info">
+                        <h3>Tư Vấn Thiết Kế Nội Thất & Ngoại Thất</h3>
+                        <p>Dịch vụ tư vấn thiết kế nội thất và ngoại thất chuyên nghiệp của RBY Group giúp khách hàng có được không gian sống hài hòa, sang trọng, tiện nghi và đẳng cấp. Chúng tôi chú trọng sự đồng nhất giữa không gian bên trong và ngoại thất bên ngoài để tạo nên tổng thể hoàn mỹ.</p>
+                    </div>
+                </div>
+                
+                <div class="product-item">
+                    <div class="product-image">
+                        <img src="https://images.pexels.com/photos/323775/pexels-photo-323775.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Tư Vấn Thiết Kế Nhà Dân Dụng">
+                        <a href="contact.html" class="view-detail">Xem chi tiết</a>
+                    </div>
+                    <div class="product-info">
+                        <h3>Tư Vấn Thiết Kế Nhà Dân Dụng</h3>
+                        <p>RBY Group mang đến giải pháp tư vấn thiết kế nhà dân dụng hiện đại, bền vững và hợp phong thủy. Từ nhà cấp 4, nhà phố đến biệt thự, mỗi công trình đều được tính toán kỹ lưỡng để đáp ứng nhu cầu sinh hoạt, thẩm mỹ và ngân sách của gia chủ.</p>
                     </div>
                 </div>
                 <div class="product-item">
                     <div class="product-image">
                         <img src="./anh/backgroud4.png" alt="Thiết Kế Văn Phòng">
+                        <a href="contact.html" class="view-detail">Xem chi tiết</a>
                     </div>
                     <div class="product-info">
                         <h3>Thiết Kế Văn Phòng</h3>
@@ -216,6 +240,7 @@
                 <div class="product-item">
                     <div class="product-image">
                         <img src="./anh/mau8.jpg" alt="Thiết Kế Showroom">
+                        <a href="contact.html" class="view-detail">Xem chi tiết</a>
                     </div>
                     <div class="product-info">
                         <h3>Thiết Kế Lang Can Cầu Thang</h3>
@@ -225,6 +250,7 @@
                 <div class="product-item">
                     <div class="product-image">
                         <img src="./anh/backgroud6.jpg" alt="Thiết Kế Nhà Hàng">
+                        <a href="contact.html" class="view-detail">Xem chi tiết</a>
                     </div>
                     <div class="product-info">
                         <h3>Thiết Kế Nhà Hàng - Cafe</h3>
@@ -234,6 +260,7 @@
                 <div class="product-item">
                     <div class="product-image">
                         <img src="./anh/mau7.jpg" alt="Thiết Kế Khách Sạn">
+                        <a href="contact.html" class="view-detail">Xem chi tiết</a>
                     </div>
                     <div class="product-info">
                         <h3>Thiết Kế Thang Máy</h3>
@@ -243,6 +270,7 @@
                 <div class="product-item">
                     <div class="product-image">
                         <img src="./anh/backgroud7.jpg " alt="Thiết Kế Spa">
+                        <a href="contact.html" class="view-detail">Xem chi tiết</a>
                     </div>
                     <div class="product-info">
                         <h3>Thiết Kế Spa - Thẩm Mỹ</h3>
