--- a/thuong-hieu-rieng.html
+++ b/thuong-hieu-rieng.html
@@ -44,7 +44,7 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>Mở Thương Hiệu Sơn - Chứng Chỉ - Đăng Ký Thương Hiệu </h1>
+            <h1>Mở Thương Hiệu Sơn Nhượng Quyền Thương Hiệu </h1>
             <p>Tạo Dựng Thương Hiệu Sơn Riêng - Chúng Tôi Sản Xuất, Bạn Kinh Doanh</p>
             <div class="breadcrumb">
                 <a href="index.html">Trang Chủ</a>
@@ -167,6 +167,9 @@
                 </div>
             </div>
 
+      
+
+
             <!-- Service Packages -->
             <div class="section-header" style="margin-top: 80px;">
                 <h2>Gói Dịch Vụ Thương Hiệu Sơn</h2>
@@ -194,7 +197,7 @@
 
                 <div class="product-item">
                     <div class="product-image">
-                        <img src=".//anh/son9.jpg" alt="Gói Chuyên Nghiệp">
+                        <img src="./anh/son9.jpg" alt="Gói Chuyên Nghiệp">
                     </div>
                     <div class="product-info">
                         <h3>Gói CHUYÊN NGHIỆP</h3>
@@ -211,7 +214,7 @@
 
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="./anh/son5.jpg" alt="Gói Doanh Nghiệp">
+                        <img src="./anh/son4.jpg" alt="Gói Doanh Nghiệp">
                     </div>
                     <div class="product-info">
                         <h3>Gói DOANH NGHIỆP</h3>
@@ -227,6 +230,70 @@
                 </div>
             </div>
 
+            
+                  <!-- Franchise Section -->
+<section class="content-section full-bg"  style="margin-top: 30px;">
+    <div class="container">
+        <div class="section-header">
+            <h2>Nhượng Quyền Thương Hiệu Sơn RBY GROUP</h2>
+            <div class="divider"></div>
+            <p>Mô Hình Hợp Tác Đầu Tư An Toàn – Sinh Lợi Bền Vững</p>
+        </div>
+
+        <div class="about-content" style="margin-bottom: 60px;">
+            <div class="about-image">
+                <img src="./anh/son11.jpg" alt="Nhượng Quyền Sơn RBY">
+            </div>
+            <div class="about-text" >
+                <h3>Đồng Hành Cùng Thương Hiệu Lớn – Kiếm Lợi Nhuận Ổn Định</h3>
+                <p>RBY GROUP mở rộng cơ hội hợp tác dành cho các nhà đầu tư, đại lý và đối tác thông qua chương trình <strong>nhượng quyền thương hiệu sơn RBY</strong>. Đây là mô hình đầu tư thông minh, giúp bạn sở hữu ngay thương hiệu sơn nổi tiếng mà không cần xây dựng từ đầu.</p>
+                <p>Với sự hỗ trợ toàn diện từ tập đoàn – từ đào tạo, cung ứng hàng hóa, marketing đến quản lý hệ thống – bạn hoàn toàn có thể vận hành kinh doanh sơn hiệu quả, nhanh chóng thu hồi vốn và sinh lời bền vững.</p>
+                <ul style="margin-top: 15px;">
+                    <li><i class="fas fa-check-circle" style="color: var(--primary-color); margin-right: 8px;"></i> Quyền sử dụng thương hiệu RBY GROUP chính thức</li>
+                    <li><i class="fas fa-check-circle" style="color: var(--primary-color); margin-right: 8px;"></i> Cung ứng sản phẩm độc quyền & hỗ trợ kỹ thuật 24/7</li>
+                    <li><i class="fas fa-check-circle" style="color: var(--primary-color); margin-right: 8px;"></i> Hỗ trợ mở đại lý, showroom, chiến lược kinh doanh</li>
+                    <li><i class="fas fa-check-circle" style="color: var(--primary-color); margin-right: 8px;"></i> Marketing, quảng bá thương hiệu & nhận diện đồng bộ</li>
+                </ul>
+                <a href="contact.html" class="btn-primary" style="margin-top: 20px; display: inline-block;">Đăng Ký Nhượng Quyền Ngay</a>
+            </div>
+        </div>
+
+        <div class="product-grid">
+            <div class="product-item">
+                <div class="product-image">
+                    <img src="./anh/dly2.jpg" alt="Nhượng Quyền Cấp 1">
+                    <a href="contact.html" class="view-detail">Xem chi tiết</a>
+                </div>
+                <div class="product-info">
+                    <h3>Đại Lý Nhượng Quyền Cấp 1</h3>
+                    <p>Dành cho nhà đầu tư có khả năng phân phối quy mô khu vực. Nhận mức chiết khấu cao, hỗ trợ mở showroom và chiến lược kinh doanh độc quyền.</p>
+                </div>
+            </div>
+
+            <div class="product-item">
+                <div class="product-image">
+                    <img src="./anh/dly1.jpg" alt="Nhượng Quyền Cấp 2">
+                    <a href="contact.html" class="view-detail">Xem chi tiết</a>
+                </div>
+                <div class="product-info">
+                    <h3>Đại Lý Nhượng Quyền Cấp 2</h3>
+                    <p>Phù hợp với cá nhân, hộ kinh doanh địa phương. Được cung cấp bảng giá ưu đãi, vật phẩm quảng cáo và hỗ trợ marketing định kỳ.</p>
+                </div>
+            </div>
+
+            <div class="product-item">
+                <div class="product-image">
+                    <img src="./anh/son10.jpg" alt="Đối Tác Liên Kết Khu Vực">
+                    <a href="contact.html" class="view-detail">Xem chi tiết</a>
+                </div>
+                <div class="product-info">
+                    <h3>Đối Tác Liên Kết Khu Vực</h3>
+                    <p>Dành cho doanh nghiệp hoặc đơn vị đang hoạt động trong ngành vật liệu xây dựng muốn mở rộng sang lĩnh vực sơn cao cấp RBY GROUP.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
             <!-- Benefits -->
             <div class="section-header" style="margin-top: 80px;">
                 <h2>Lợi Ích Khi Hợp Tác Với RBY Group</h2>
