--- a/son.html
+++ b/son.html
@@ -727,7 +727,7 @@
           <h3>Liên Hệ</h3>
           <div class="contact-info">
             <p><i class="fas fa-map-marker-alt"></i> Trụ sở chính: Thôn Kim Sơn, xã Đông Tiến, huyện Đông Sơn, tỉnh Thanh Hóa</p>
-            <p><i class="fas fa-phone"></i> <a href="tel:0977912846">0977912846</a></p>
+            <p><i class="fas fa-phone"></i> <a href="tel:0977912846">0877.15.86.86 - 0946.565.893</a></p>
             <p><i class="fas fa-envelope"></i> Sonnanorby.rbygroup@gmail.com</p>
             <p><i class="fas fa-clock"></i> 8:00 - 20:00 (Thứ 2 - Chủ nhật)</p>
           </div>
