--- a/contact.html
+++ b/contact.html
@@ -775,7 +775,7 @@ section {
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" >Trang Chủ</a></li>
                     <li><a href="son.html">Sản Xuất Sơn  </a></li>
-                    <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
+                    <li><a href="tham-my.html">chăm sóc sức khỏe</a></li>
                     <li><a href="thiet-ke.html" >Tư Vấn Thiết Kế</a></li>
                     <li><a href="thuong-hieu-rieng.html" >Mở Thương Hiệu Riêng</a></li>
                     <li><a href="contact.html" class="active">Liên Hệ</a></li>
@@ -789,6 +789,9 @@ section {
         </div>
     </nav>
 </header>
+<button id="viewProductsBtn" class="view-products-btn">
+    <a href="products.html"><i class="fas fa-paint-roller"></i> Xem Sản Phẩm</a>
+</button>
 <!-- Page Header -->
 <section class="page-header">
     <div class="container">
