--- a/son.html
+++ b/son.html
@@ -26,7 +26,7 @@
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" >Trang Chủ</a></li>
                     <li><a href="son.html" class="active">Sản Xuất Sơn  </a></li>
-                    <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
+                    <li><a href="tham-my.html">chăm sóc sức khỏe</a></li>
                     <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
                     <li><a href="thuong-hieu-rieng.html" >Mở Thương Hiệu Riêng</a></li>
                     <li><a href="contact.html">Liên Hệ</a></li>
@@ -40,6 +40,9 @@
         </div>
     </nav>
 </header>
+<button id="viewProductsBtn" class="view-products-btn">
+    <a href="products.html"><i class="fas fa-paint-roller"></i> Xem Sản Phẩm</a>
+</button>
 
  <!-- Hero Slider -->
  <section class="hero-slider">
@@ -187,6 +190,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/sonlot.jpg" alt="Sơn Lót Khánh Kiềm Nội Thất Tiêu Chuẩn">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Lót Khánh Kiềm Nội Thất Tiêu Chuẩn</h3>
@@ -197,6 +201,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/sonlotcaocap.jpg" alt="Sơn Lót Khánh Kiềm Nội Thất Cao Cấp">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Lót Khánh Kiềm Nội Thất Cao Cấp</h3>
@@ -207,6 +212,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/son1.jpg" alt="Sơn Lót Khánh Kiềm Ngoại Thất Cao Cấp">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Lót Khánh Kiềm Ngoại Thất Cao Cấp</h3>
@@ -217,6 +223,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/son2.jpg" alt="Sơn Chống Thấm Hệ Trộn Với Xi Măng">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Chống Thấm Hệ Trộn Với Xi Măng</h3>
@@ -227,6 +234,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/son3.jpg" alt="Sơn Siêu Trắng Trần Nội Thất Cao Cấp">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Siêu Trắng Trần Nội Thất Cao Cấp</h3>
@@ -237,6 +245,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/son4.jpg" alt="Sơn Chống Thấm Màu Cao Cấp">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Chống Thấm Màu Cao Cấp</h3>
@@ -247,6 +256,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/son5.jpg" alt="Sơn Mịn Nội Thất Tiêu Chuẩn">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Mịn Nội Thất Tiêu Chuẩn</h3>
@@ -257,6 +267,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/son6.jpg" alt="Sơn Bóng Nội Thất Cao Cấp">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Bóng Nội Thất Cao Cấp</h3>
@@ -267,6 +278,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/son7.jpg" alt="Sơn Siêu Bóng Nội Thất Men Đặc Biệt">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Siêu Bóng Nội Thất Men Đặc Biệt</h3>
@@ -277,6 +289,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/son8.jpg" alt="Sơn Mịn Ngoại Thất Cao Cấp">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Mịn Ngoại Thất Cao Cấp</h3>
@@ -287,6 +300,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/son9.jpg" alt="Sơn Mịn Nội Thất Cao Cấp">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Mịn Nội Thất Cao Cấp</h3>
@@ -297,6 +311,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/son10.jpg" alt="Sơn Bóng Ngoại Thất Cao Cấp">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Bóng Ngoại Thất Cao Cấp</h3>
@@ -307,6 +322,7 @@
             <div class="product-item">
                 <div class="product-image">
                     <img src="./anh/son11.jpg" alt="Sơn Siêu Bóng Ngoại Thất Men Sứ Đặc Biệt">
+                    <a href="products.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
                     <h3>Sơn Siêu Bóng Ngoại Thất Men Sứ Đặc Biệt</h3>
