--- a/tham-my.html
+++ b/tham-my.html
@@ -26,9 +26,10 @@
                     <ul class="nav-menu" id="navMenu">
                         <li><a href="index.html" >Trang Chủ</a></li>
                         <li><a href="son.html">Sản Xuất Sơn   </a></li>
-                        <li><a href="tham-my.html" class="active">Thẩm Mỹ Viện</a></li>
+                        <li><a href="tham-my.html" class="active">chăm sóc sức khỏe</a></li>
                         <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
                         <li><a href="thuong-hieu-rieng.html" >Mở Thương Hiệu Riêng</a></li>
+                        
                         <li><a href="contact.html">Liên Hệ</a></li>
                     </ul>
                     <div class="hamburger" id="hamburger">
