--- a/thuong-hieu-rieng.html
+++ b/thuong-hieu-rieng.html
@@ -26,9 +26,10 @@
                     <ul class="nav-menu" id="navMenu">
                         <li><a href="index.html">Trang Chủ</a></li>
                         <li><a href="son.html">Sản Xuất Sơn</a></li>
-                        <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
+                        <li><a href="tham-my.html">chăm sóc sức khỏe</a></li>
                         <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
                         <li><a href="thuong-hieu-rieng.html" class="active">Mở Thương Hiệu Riêng</a></li>
+                        
                         <li><a href="contact.html">Liên Hệ</a></li>
                     </ul>
                     <div class="hamburger" id="hamburger">
@@ -40,6 +41,9 @@
             </div>
         </nav>
     </header>
+    <button id="viewProductsBtn" class="view-products-btn">
+        <a href="products.html"><i class="fas fa-paint-roller"></i> Xem Sản Phẩm</a>
+    </button>
 
     <!-- Page Header -->
     <section class="page-header">
