--- a/products.html
+++ b/products.html
@@ -490,7 +490,9 @@
     <button id="viewProductsBtn" class="view-products-btn">
         <a href="products.html"><i class="fas fa-paint-roller"></i> Xem Sản Phẩm</a>
     </button>
-
+    <button id="viewcolorsBtn" class="view-color-btn">
+        <a href="color.html"><i class="fas fa-palette"></i> Xem Bảng Màu</a>
+    </button>
    <!-- Hero Slider -->
  <section class="hero-slider">
     <div class="slider-container">
@@ -508,7 +510,7 @@
                 <a href="contact.html" class="btn-primary">Tìm Hiểu Thêm</a>
             </div>
         </div>
-        <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
+        <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('./anh/RBY_GROUP.png') center/cover;">
             <div class="slide-content">
                 <h2>Dịch Vụ Đa Dạng Chuyên Nghiệp</h2>
                 <p>Giải Pháp Toàn Diện Cho Mọi Khách Hàng</p>
