--- a/tham-my.html
+++ b/tham-my.html
@@ -47,7 +47,7 @@
         <div class="slider-container">
             <div class="slide active" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('./anh/backgroud10.png') center/cover;">
                 <div class="slide-content">
-                    <h2>Sắc Đẹp Tạo Nên Điểm Nhấn Của tôi</h2>
+                    <h2>Sức khoẻ là thứ chúng ta ưu tiên</h2>
                     <p>10+ Năm Kinh Nghiệm Trong Ngành</p>
                     <a href="contact.html" class="btn-primary">Tìm Hiểu Thêm</a>
                 </div>
@@ -79,7 +79,7 @@
 <section class="about" id="about">
     <div class="container">
         <div class="section-header">
-            <h2>Về Thẩm Mỹ Viện Rby Group</h2>
+            <h2>Dưỡng Sinh Đông Y – Cân Bằng Thân Tâm</h2>
             <div class="divider"></div>
             <p>Hành Trình Nâng Tầm Vẻ Đẹp Việt Cùng Rby Group</p>
         </div>
@@ -88,8 +88,8 @@
                 <img src="./anh/backgroud3.png" alt="Thẩm Mỹ Viện Ruby Group">
             </div>
             <div class="about-text">
-                <h3>Hệ Thống Thẩm Mỹ Cao Cấp Hàng Đầu Việt Nam</h3>
-                <p>Thẩm Mỹ Viện <strong>Rby Group</strong> là thương hiệu làm đẹp uy tín trực thuộc tập đoàn Rby Group, hoạt động với sứ mệnh “Tôn vinh vẻ đẹp tự nhiên – Nâng tầm phong thái Việt”. Với hơn 10 năm kinh nghiệm trong lĩnh vực làm đẹp, Rby Group đã và đang dẫn đầu xu hướng thẩm mỹ hiện đại, ứng dụng công nghệ tiên tiến hàng đầu thế giới.</p>
+                <h3>Hệ Thống chăm sóc sức khoẻ Cao Cấp Hàng Đầu Việt Nam</h3>
+                <p>Thẩm Mỹ Viện chăm sóc sức khoẻ <strong>RBY Group</strong> là thương hiệu làm đẹp, chăm sóc sức khoẻ uy tín trực thuộc tập đoàn Rby Group, hoạt động với sứ mệnh “Tôn vinh vẻ đẹp tự nhiên – Nâng tầm phong thái Việt”. Với hơn 10 năm kinh nghiệm trong lĩnh vực làm đẹp, Rby Group đã và đang dẫn đầu xu hướng thẩm mỹ hiện đại, ứng dụng công nghệ tiên tiến hàng đầu thế giới.</p>
                 <p>Chúng tôi chuyên cung cấp các dịch vụ: <strong>chăm sóc da chuyên sâu, trẻ hóa làn da, phun xăm thẩm mỹ, giảm béo công nghệ cao, thẩm mỹ không phẫu thuật</strong>… mang đến sự tự tin và vẻ đẹp hoàn hảo cho hàng chục nghìn khách hàng trên toàn quốc.</p>
                 <p>Đội ngũ chuyên gia, bác sĩ giàu kinh nghiệm cùng hệ thống trang thiết bị đạt chuẩn quốc tế giúp Rby Group luôn khẳng định vị thế thương hiệu thẩm mỹ uy tín, chất lượng và đẳng cấp.</p>
                 <div class="about-stats">
@@ -120,7 +120,7 @@
     <section class="content-section">
         <div class="container">
             <div class="section-header">
-                <h2>Về Thẩm Mỹ Viện RBY </h2>
+                <h2>Về Thẩm Mỹ Viện chăm sóc sức khoẻ RBY </h2>
                 <div class="divider"></div>
                 <p>Hệ Thống Thẩm Mỹ Viện Đẳng Cấp 5 Sao</p>
             </div>
@@ -325,7 +325,7 @@
     <section class="content-section" style="background: var(--bg-light);">
         <div class="container">
             <div class="section-header">
-                <h2>Quy Trình Điều Trị Tại Ruby</h2>
+                <h2>Quy Trình Điều Trị Tại RBY</h2>
                 <div class="divider"></div>
                 <p>6 Bước Đảm Bảo Hiệu Quả Tối Ưu</p>
             </div>
@@ -362,7 +362,7 @@
     <section class="content-section" style="background: var(--white);">
         <div class="container">
             <div class="section-header">
-                <h2>Cam Kết Của Thẩm Mỹ Viện Rby</h2>
+                <h2>Cam Kết Của Thẩm Mỹ Viện chăm kết sức khoẻ RBY GROUP</h2>
                 <div class="divider"></div>
                 <p>An Toàn - Hiệu Quả - Uy Tín</p>
             </div>
