--- a/thiet-ke.html
+++ b/thiet-ke.html
@@ -44,6 +44,9 @@
 <button id="viewProductsBtn" class="view-products-btn">
     <a href="products.html"><i class="fas fa-paint-roller"></i> Xem Sản Phẩm</a>
 </button>
+<button id="viewcolorsBtn" class="view-color-btn">
+    <a href="color.html"><i class="fas fa-palette"></i> Xem Bảng Màu</a>
+</button>
 
 
      <!-- Hero Slider -->
