--- a/thuong-hieu-rieng.html
+++ b/thuong-hieu-rieng.html
@@ -44,11 +44,14 @@
     <button id="viewProductsBtn" class="view-products-btn">
         <a href="products.html"><i class="fas fa-paint-roller"></i> Xem Sản Phẩm</a>
     </button>
+    <button id="viewcolorsBtn" class="view-color-btn">
+        <a href="color.html"><i class="fas fa-palette"></i> Xem Bảng Màu</a>
+    </button>
 
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>Mở Thương Hiệu Sơn Nhượng Quyền Thương Hiệu </h1>
+            <h1>Mở Thương Hiệu Riêng – Nhượng Quyền Cùng RBY GROUP </h1>
             <p>Tạo Dựng Thương Hiệu Sơn Riêng - Chúng Tôi Sản Xuất, Bạn Kinh Doanh</p>
             <div class="breadcrumb">
                 <a href="index.html">Trang Chủ</a>
@@ -287,7 +290,7 @@
 
             <div class="product-item">
                 <div class="product-image">
-                    <img src="./anh/son10.jpg" alt="Đối Tác Liên Kết Khu Vực">
+                    <img src="./anh/dly2.jpg" alt="Đối Tác Liên Kết Khu Vực">
                     <a href="contact.html" class="view-detail">Xem chi tiết</a>
                 </div>
                 <div class="product-info">
@@ -422,68 +425,69 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>Tập Đoàn Rby Group</h3>
-                    <p>Rby Group – Tập đoàn đa lĩnh vực hàng đầu Việt Nam, chuyên cung cấp sơn cao cấp, dịch vụ tư vấn – thiết kế nội ngoại thất và hệ thống thẩm mỹ viện công nghệ cao.</p>
-                    <div class="social-links">
-                        <a href="https://www.facebook.com/rby.sonnano/"><i class="fab fa-facebook"></i></a>
-                        <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-                        <a href="https://zalo.me/0977912846"><i class="fas fa-comment-dots"></i></a>
-                    </div>
-                </div>
-
-                <div class="footer-section">
-                    <h3>Liên Hệ</h3>
-                    <div class="contact-info">
-                        <p><i class="fas fa-map-marker-alt"></i> Trụ sở chính: Thôn Kim Sơn, xã Đông Tiến, huyện Đông Sơn, tỉnh Thanh Hóa</p>
-                        <p><i class="fas fa-phone"></i> <a href="tel:0977912846">0877.15.86.86 - 0946.565.893</a></p>
-                        <p><i class="fas fa-envelope"></i> Sonnanorby.rbygroup@gmail.com</p>
-                        <p><i class="fas fa-clock"></i> 8:00 - 20:00 (Thứ 2 - Chủ nhật)</p>
-                    </div>
-                </div>
-
-                <div class="footer-section">
-                    <h3>Dịch Vụ Chính</h3>
-                    <ul>
-                        <li><a href="son.html">Phân Phối Sơn Rby Premium</a></li>
-                        <li><a href="thuong-hieu-rieng.html">Mở Thương Hiệu Sơn Riêng</a></li>
-                        <li><a href="thiet-ke.html">Tư Vấn & Thiết Kế Nội Thất</a></li>
-                        <li><a href="tham-my.html">Thẩm Mỹ Viện Rby Group</a></li>
-                        <li><a href="contact.html">Hỗ Trợ Khách Hàng</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-section">
-                    <h3>Bản Đồ & Chi Nhánh</h3>
-                    <div class="map-container">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3437.5977926090286!2d105.78300257522214!3d19.736404581608905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e1!3m2!1sen!2s!4v1759818344086!5m2!1sen!2s"
-                            width="100%"
-                            height="300"
-                            style="border:0; border-radius: 10px;"
-                            allowfullscreen=""
-                            loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-                    </div>
-                    <ul style="margin-top: 15px;">
-                        <li><a href="contact.html">Chi Nhánh Hà Nội</a></li>
-                        <li><a href="contact.html">Chi Nhánh TP. Hồ Chí Minh</a></li>
-                        <li><a href="contact.html">Chi Nhánh Thanh Hóa</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="footer-bottom">
-                <p>&copy; 2025 Tập Đoàn Rby Group. Tất cả quyền được bảo lưu.</p>
-            </div>
+<footer class="footer">
+    <div class="container">
+      <div class="footer-content">
+        
+        <div class="footer-section">
+          <h3>Tập Đoàn Rby Group</h3>
+          <p>Rby Group – Tập đoàn đa lĩnh vực hàng đầu Việt Nam, chuyên cung cấp sơn cao cấp, dịch vụ tư vấn – thiết kế nội ngoại thất và hệ thống thẩm mỹ viện công nghệ cao.</p>
+          <div class="social-links">
+            <a href="https://www.facebook.com/rby.sonnano/"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="https://zalo.me/0977912846"><i class="fas fa-comment-dots"></i></a>
+          </div>
         </div>
-    </footer>
-
+  
+        <div class="footer-section">
+          <h3>Liên Hệ</h3>
+          <div class="contact-info">
+            <p><i class="fas fa-map-marker-alt"></i> Trụ sở chính: Thôn Kim Sơn, xã Đông Tiến, huyện Đông Sơn, tỉnh Thanh Hóa</p>
+            <p><i class="fas fa-phone"></i> <a href="tel:0977912846">0877.15.86.86 - 0946.565.893</a></p>
+            <p><i class="fas fa-envelope"></i> Sonnanorby.rbygroup@gmail.com</p>
+            <p><i class="fas fa-clock"></i> 8:00 - 20:00 (Thứ 2 - Chủ nhật)</p>
+          </div>
+        </div>
+  
+        <div class="footer-section">
+          <h3>Dịch Vụ Chính</h3>
+          <ul>
+            <li><a href="son.html">Phân Phối Sơn Rby Premium</a></li>
+            <li><a href="thiet-ke.html">Tư Vấn & Thiết Kế Nội Thất</a></li>
+            <li><a href="tham-my.html">Thẩm Mỹ Viện Rby Group</a></li>
+            <li><a href="contact.html">Đào Tạo & Hợp Tác Đại Lý</a></li>
+            <li><a href="contact.html">Hỗ Trợ Khách Hàng</a></li>
+          </ul>
+        </div>
+  
+        <div class="footer-section">
+          <h3>Bản Đồ & Chi Nhánh</h3>
+          <div class="map-container">
+            <iframe 
+              src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3437.5977926090286!2d105.78300257522214!3d19.736404581608905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e1!3m2!1sen!2s!4v1759818344086!5m2!1sen!2s"
+              width="100%" 
+              height="300" 
+              style="border:0; border-radius: 10px;" 
+              allowfullscreen="" 
+              loading="lazy" 
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+          </div>
+          <ul style="margin-top: 15px;">
+            <li><a href="contact.html">Chi Nhánh Hà Nội</a></li>
+            <li><a href="contact.html">Chi Nhánh TP. Hồ Chí Minh</a></li>
+            <li><a href="contact.html">Chi Nhánh Thanh Hóa</a></li>
+            
+          </ul>
+        </div>
+      </div>
+  
+      <div class="footer-bottom">
+        <p>&copy; 2025 Tập Đoàn Rby Group. Tất cả quyền được bảo lưu.</p>
+      </div>
+    </div>
+  </footer>
     <script src="main.js"></script>
 </body>
 </html>
